--- a/package.json
+++ b/package.json
@@ -14,19 +14,21 @@
   "dependencies": {
     "classlist-polyfill": "^1.2.0",
     "crel": "^3.0.0",
-    "prosemirror-commands": "^1.0.0",
+    "rope-sequence": "1.2.2",
+    "w3c-keyname": "1.1.8",
+    "prosemirror-commands": "^1.0.7",
     "prosemirror-example-setup": "^1.0.0",
-    "prosemirror-gapcursor": "^1.0.0",
-    "prosemirror-history": "^1.0.0",
-    "prosemirror-inputrules": "^1.0.0",
-    "prosemirror-keymap": "^1.0.0",
-    "prosemirror-menu": "^1.0.0",
-    "prosemirror-model": "^1.0.0",
+    "prosemirror-gapcursor": "^1.0.3",
+    "prosemirror-history": "^1.0.3",
+    "prosemirror-inputrules": "^1.0.1",
+    "prosemirror-keymap": "^1.0.1",
+    "prosemirror-menu": "^1.0.5",
+    "prosemirror-model": "^1.6.3",
     "prosemirror-schema-basic": "^1.0.0",
-    "prosemirror-schema-list": "^1.0.0",
-    "prosemirror-state": "^1.0.0",
-    "prosemirror-transform": "^1.0.0",
-    "prosemirror-view": "^1.0.0"
+    "prosemirror-schema-list": "^1.0.1",
+    "prosemirror-state": "^1.2.2",
+    "prosemirror-transform": "^1.1.3",
+    "prosemirror-view": "^1.6.5"
   },
   "devDependencies": {
     "babel-core": "6.26.0",
